--- a/form.htm
+++ b/form.htm
@@ -80,7 +80,7 @@ window.onload = function () {
   
 <body>
   <div class="container">
-    <h2 class="text-center">Dynamic List Example</h2>
+    <h2 class="text-center">Dynamic Web page</h2>
       <input type="text" id="itemInput" class="form-control" placeholder="Enter items separated by commas">
       <button id="addItemBtn" class="btn btn-primary">아이템 추가</button>
       <button id="addImpItemBtn" class="btn btn-secondary">중요한 아이템 추가</button>
